# myinit

./: .gitignore  Cargo.toml  README.md  build.sh
myinit/: Cargo.toml
myinit/src/: main.rs
myinit/src/subsystems/: mod.rs
myinit/src/subsystems/fs/: mod.rs
myinit/src/subsystems/ipc/: mod.rs  protocol.rs
myinit/src/subsystems/services/: config.rs  mod.rs  supervisor.rs
myinit/src/subsystems/system/: fs.rs  mod.rs  shutdown.rs
myinitctl/: Cargo.toml
myinitctl/src/: command.rs  main.rs
myinitctl/src/commands/: mod.rs  service.rs  shutdown.rs
src/: lib.rs  main.rs
src/subsystems/fs/: mod.rs
src/subsystems/process/: mod.rs  reaper.rs  spawn.rs
