[workspace]
resolver = "3"
members = [
    "myinit",
    "myinitctl"
]

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
